<resources>
    <string name="app_name">Salonika News</string>
    <string name="share_it">Share It</string>
    <string name="rate_it">Rate It</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_language">Change Language</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="others">Others</string>
    <string name="home">Home</string>
    <string name="about">About Us</string>
    <string name="rules">Rules</string>
    <string name="addPost">Add Post</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="guest">Guest</string>
    <string name="logout">Logout</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="more">More</string>
    <string name="read">Read</string>
    <string name="author">Author</string>
    <string name="admin">Admin</string>
    <string name="lastName">Lastname</string>
    <string name="firstName">Firstname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email_form">Email Form</string>
    <string name="contact_us">Contact Us</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

</resources>