<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"/>
        <item
            android:id="@+id/menuLogin"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/login"/>
        <item
            android:id="@+id/menuNotifications"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/notifications"/>
        <item
            android:id="@+id/menuAddPost"
            android:icon="@drawable/ic_baseline_post_add_24"
            android:title="@string/addPost"/>
        <item
            android:id="@+id/menuProfile"
            android:icon="@drawable/ic_baseline_face_24"
            android:title="@string/profile"/>
        <item
            android:id="@+id/menuRules"
            android:icon="@drawable/ic_baseline_rule_24"
            android:title="@string/rules"/>
        <item
            android:id="@+id/menuAbout"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about"/>
    </group>

</menu>