<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_guest"
    app:startDestination="@id/menuHome">

    <fragment
        android:id="@+id/menuHome"
        android:name="eu.seijindemon.salonikanews.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/menuNotifications"
        android:name="eu.seijindemon.salonikanews.fragments.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/menuAbout"
        android:name="eu.seijindemon.salonikanews.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/menuRules"
        android:name="eu.seijindemon.salonikanews.fragments.RulesFragment"
        android:label="@string/rules"
        tools:layout="@layout/fragment_rules" />
    <activity
        android:id="@+id/menuRegister"
        android:name="eu.seijindemon.salonikanews.RegisterActivity"
        android:label="@string/register"
        tools:layout="@layout/activity_register" />
</navigation>