<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/recycler_image"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            app:srcCompat="@drawable/profile_image"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/recycler_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />

            <TextView
                android:id="@+id/recycler_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="15dp">

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/recycler_read_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read" />

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/recycler_like_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:icon="@drawable/ic_baseline_thumb_up_24" />

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/recycler_unlike_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:icon="@drawable/ic_baseline_thumb_down_24" />

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/recycler_share_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:icon="@drawable/ic_baseline_share_24" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>