<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/profile" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profile_image"
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_baseline_face_24"
        app:riv_oval="true"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/firstNameProfileView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text="FirstName:"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/firstNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/firstNameProfileView"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text=""
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lastNameProfileView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text="LastName:"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lastNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/lastNameProfileView"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text=""
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailProfileView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text="Email:"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/emailProfileView"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text=""
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/logout"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteProfileButton"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/delete_profile"
        android:layout_marginTop="100dp"/>

</LinearLayout>